--- a/src/layout/userLayout.less
+++ b/src/layout/userLayout.less
@@ -9,6 +9,9 @@
     .content {
         flex: 1;
         padding: 72px 0;
+        .top {
+            text-align: center;
+        }
         .desc {
             text-align: center;
             color: @titleColor;
