:lipstick: 修改登录的样式

--- a/src/layout/userLayout.less
+++ b/src/layout/userLayout.less
@@ -19,7 +19,9 @@
         }
         .title {
             // color: @titleColor;
-            font-size: 36px;
+            font-size: 50px;
+            margin-left: 20px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
     }
 }
@@ -32,7 +34,7 @@
         background-position: center 110px;
         background-size: 100%;
         .content {
-            padding: 100px 0 24px;
+            padding: 60px 0 24px;
             .top {
                 text-align: center;
             }
