--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -1,8 +1,28 @@
 .layout {
-    display: flex;
-    flex-direction: column;
     min-height: 100vh;
-    &--side-bar {
-        flex-direction: row;
+    .slide {
+        height: 100vh;
+        overflow: auto;
+        position: relative;
+    }
+    &_header {
+        background-color: #fff;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        .trigger {
+            padding: 0 10px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: color 0.3s;
+            &:hover {
+            }
+        }
+    }
+    &_content {
+        .content {
+            position: relative;
+            padding: 10px;
+        }
     }
 }
