--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -19,7 +19,7 @@
     &_content {
         .content {
             position: relative;
-            padding: 10px;
+            // padding: 10px;
         }
     }
 }
